force-app/main/default/objects/Projects__c/Projects__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>PJ{000000}</displayFormat>
        <label>Projects No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>