force-app/main/default/objects/Projects__c/fields/Content_Date__c.field-meta.xml
<CustomField>
    <fullName>Content_Date__c</fullName>
    <label>Content Date</label>
    <type>Date</type>
</CustomField>