force-app/main/default/objects/Projects__c/fields/In_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Status__c</fullName>
    <label>Progress Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>