force-app/main/default/objects/Projects__c/fields/Progress_Colour__c.field-meta.xml
<CustomField>
    <fullName>Progress_Colour__c</fullName>
    <formula>IMAGE( 

CASE(  In_Progress_Status__c  , 

&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 

&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 

&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 

&quot;/s.gif&quot;), 

&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Colour</label>
    <type>Text</type>
</CustomField>