force-app/main/default/objects/Projects__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <label>Project Overview</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>