force-app/main/default/objects/Projects__c/fields/Testing_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_Date__c</fullName>
    <label>Testing Date</label>
    <type>Date</type>
</CustomField>