force-app/main/default/objects/Projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Project_Summary__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Priority__c</columns>
    <columns>Progress_Colour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>