force-app/main/default/objects/Projects__c/listViews/All_Projects_Not_Started.listView-meta.xml
<ListView>
    <fullName>All_Projects_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Project_Summary__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Priority__c</columns>
    <columns>Progress_Colour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>All Projects - Not Started</label>
</ListView>